--- a/src/app/components/movimentacao-list/movimentacao-list.component.html
+++ b/src/app/components/movimentacao-list/movimentacao-list.component.html
@@ -17,7 +17,7 @@
     <tbody>
     <tr *ngFor="let item of movimentacoes; index as i">
       <th scope="row">{{ i + 1 }}</th>
-      <td>{{ item.dataHora | date: 'dd/MM/yyyy HH:mm:ss' }}</td>
+      <td>{{ item.dataHora | date: 'dd/MM/yyyy' }}</td>
       <td>{{ item.descricao }}</td>
       <td [ngStyle]="{'color':item.tipo === 'RECEITA' ? 'blue' : 'red'}">{{ item.valor | currency:'BRL' }}</td>
       <td>{{ item.tipo }}</td>
